# panchang-calculator

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: .env.example  index.html  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: ControlPanel.jsx  FormulaPanel.jsx  PanchangPanel.jsx  ZodiacCanvas.jsx  ZodiacThreeScene.jsx
frontend/src/lib/: config.js  constants.js  i18n.js  math.js
frontend/src/store/: usePanchangStore.js
src/panchang_calculator/: __init__.py  api.py  calculations.py  config.py  localization.py
